[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zayan"
version = "0.1.0"
description = "ZAYAN: Disentangled Contrastive Transformer for Tabular Remote Sensing Data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Al Zadid Sultan Bin Habib" },
  { name = "Tanpia Tasnim" },
  { name = "Md. Ekramul Islam" },
  { name = "Muntasir Tabasum" }
]
keywords = [
  "tabular-data",
  "remote-sensing",
  "contrastive-learning",
  "self-supervised-learning",
  "transformer",
  "feature-level-contrastive-learning",
  "environmental-data",
  "classification"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "torch>=2.0.0",
  "numpy>=1.23.0",
  "pandas>=1.5.0",
  "scikit-learn>=1.2.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "optuna>=3.6.0",
  "jupyterlab>=4.0.0",
  "build>=1.0.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/zadid6pretam/ZAYAN"
Source = "https://github.com/zadid6pretam/ZAYAN"
Issues = "https://github.com/zadid6pretam/ZAYAN/issues"
Paper = "https://github.com/zadid6pretam/ZAYAN"

[tool.setuptools.packages.find]
where = ["."]
include = ["zayan*"]
