[metadata]
name = zayan
version = 0.1.0
author = Al Zadid Sultan Bin Habib, Tanpia Tasnim, Md. Ekramul Islam, Muntasir Tabasum
description = Disentangled Contrastive Transformer for Tabular Remote Sensing Data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/zadid6pretam/ZAYAN
project_urls =
    Source = https://github.com/zadid6pretam/ZAYAN
    Issues = https://github.com/zadid6pretam/ZAYAN/issues
    Paper = https://github.com/zadid6pretam/ZAYAN
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.0.0
    numpy>=1.23.0
    pandas>=1.5.0
    scikit-learn>=1.2.0
    matplotlib>=3.7.0
include_package_data = True

[options.extras_require]
dev =
    optuna>=3.6.0
    jupyterlab>=4.0.0
    build>=1.0.0
    twine>=5.0.0

[options.packages.find]
include =
    zayan
    zayan.*
